+ added some variables to config, using them where handy + remove spinner js + code cleanup

--- a/config.php.example
+++ b/config.php.example
@@ -1,4 +1,11 @@
 <?php
+define('GA_ACCOUNT', 'UA-XXXXXXX-X');
+define('ALLOW_ALL_PORTS', true);
+define('CACHE_LIFETIME', 3600);
+
+define('APP_NAME', 'Gophper');
+
+define('LOG_STATS', true);
 
 DB::$user = '';
 DB::$password = '';
