--- a/.htaccess
+++ b/.htaccess
@@ -10,5 +10,4 @@ RewriteEngine On
 # XSendFile on
 
 RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteRule ^ index.php [QSA,L]
-RewriteRule (.*) index.php?x=$1 [QSA,L]
+RewriteRule ^ index.php [QSA,L]
