--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       dockerfile: Dockerfile
     networks:
       - external_network
-      - internal_network      
+      - internal_network
+    env_file: .env
     environment:
       docker: "true"
       production: "false"
