--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     networks:
       - external_network
       - internal_network
-    env_file: .env
+        #    env_file: .env
     environment:
       docker: "true"
       production: "false"
