--- a/composer.json
+++ b/composer.json
@@ -7,23 +7,25 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "sensio/framework-extra-bundle": "^6.2",
         "symfony/apache-pack": "^1.0",
-        "symfony/asset": "6.1.*",
-        "symfony/console": "6.3.*",
-        "symfony/dotenv": "6.3.*",
-        "symfony/flex": "^2",
-        "symfony/framework-bundle": "6.3.*",
-        "symfony/mime": "6.3.*",
-        "symfony/runtime": "6.4.*",
-        "symfony/twig-bundle": "6.3.*",
-        "symfony/yaml": "6.3.*"
+        "symfony/asset": "*",
+        "symfony/console": "*",
+        "symfony/dotenv": "*",
+        "symfony/flex": "^2.9",
+        "symfony/framework-bundle": "*",
+        "symfony/mime": "*",
+        "symfony/runtime": "*",
+        "symfony/twig-bundle": "*",
+        "symfony/yaml": "*"
     },
     "config": {
         "allow-plugins": {
             "composer/package-versions-deprecated": true,
             "symfony/flex": true,
             "symfony/runtime": true
+        },
+        "audit": {
+            "block-insecure": false
         },
         "optimize-autoloader": true,
         "preferred-install": {
@@ -68,7 +70,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.3.*"
+            "require": "7.*"
         }
     }
 }
